.env and contact  id
