# swagger_output.json
@@ -17,11 +17,15 @@
       "description": "Endpoints related to contact operations"
     }
   ],
-  "schemes": ["https"],
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/": {
       "get": {
-        "tags": ["Home"],
+        "tags": [
+          "Home"
+        ],
         "description": "Home page with a link to the API documentation",
         "responses": {
           "200": {
@@ -32,7 +36,9 @@
     },
     "/contacts/": {
       "post": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to create a new contact",
         "parameters": [
           {
@@ -220,7 +226,9 @@
         }
       },
       "get": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to retrieve all contacts",
         "responses": {
           "200": {
@@ -232,7 +240,9 @@
         }
       },
       "delete": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to delete all contacts",
         "responses": {
           "200": {
@@ -246,7 +256,9 @@
     },
     "/contacts/developer": {
       "get": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to retrieve all developers",
         "responses": {
           "200": {
@@ -263,7 +275,9 @@
     },
     "/contacts/{contactId}": {
       "get": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to retrieve a contact by id",
         "parameters": [
           {
@@ -285,17 +299,27 @@
             "description": "Failed to retrieve contact"
           }
         }
-      },
+      }
+    },
+    "/contacts/{_id}": {
       "patch": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to update a contact",
         "parameters": [
           {
-            "name": "contactId",
+            "name": "_id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID of the contact"
+            "type": "string"
+          },
+          {
+            "name": "contact_id",
+            "in": "path",
+            "description": "ID of the contact",
+            "required": true,
+            "type": "string"
           },
           {
             "name": "body",
@@ -472,15 +496,23 @@
         }
       },
       "put": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to replace a contact",
         "parameters": [
           {
-            "name": "contactId",
+            "name": "_id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID of the contact"
+            "type": "string"
+          },
+          {
+            "name": "contact_id",
+            "in": "path",
+            "description": "ID of the contact",
+            "required": true,
+            "type": "string"
           },
           {
             "name": "body",
@@ -657,15 +689,23 @@
         }
       },
       "delete": {
-        "tags": ["Contacts"],
+        "tags": [
+          "Contacts"
+        ],
         "description": "Endpoint to delete a contact",
         "parameters": [
           {
-            "name": "contactId",
+            "name": "_id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID of the contact"
+            "type": "string"
+          },
+          {
+            "name": "contact_id",
+            "in": "path",
+            "description": "ID of the contact",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
